# mcp-data-gr

./: .env  README.md  main.py  pyproject.toml
