[project]
name = "data-bs-mcp"
version = "0.1.0"
description = "MCP server for data.bs.ch open data portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
data-bs-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
".env" = ".env"
